load_app_config_ignore_test_migration

--- a/package.json
+++ b/package.json
@@ -92,6 +92,10 @@
     "collectCoverageFrom": [
       "**/*.(t|j)s"
     ],
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "src/database/migrations/"
+    ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   }
